[gd_scene load_steps=3 format=3 uid="uid://w8e3e32cgfok"]

[ext_resource type="Script" path="res://hub/pack_settings/pack_settings.gd" id="1_s5j54"]
[ext_resource type="Script" path="res://hub/pack_settings/pack_input.gd" id="2_op30v"]

[node name="Pack settings" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_s5j54")

[node name="GridsContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="GridsContainer"]
layout_mode = 2
text = "Reload CurrentPack"

[node name="GeneralContainer" type="GridContainer" parent="GridsContainer"]
layout_mode = 2
columns = 2

[node name="LabelId" type="Label" parent="GridsContainer/GeneralContainer"]
layout_mode = 2
text = "ID"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Id" type="LineEdit" parent="GridsContainer/GeneralContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The pack id, this can't be changed here and must be changed in the pack selection screen."
placeholder_text = "ID"
editable = false

[node name="LabelName" type="Label" parent="GridsContainer/GeneralContainer"]
layout_mode = 2
text = "Display name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="LineEdit" parent="GridsContainer/GeneralContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The pack name that is shown in game"
placeholder_text = "Display name"
script = ExtResource("2_op30v")
target_property = "text"
property_updater = "text_changed"
card_property = "display_name"

[node name="LabelIcon" type="Label" parent="GridsContainer/GeneralContainer"]
layout_mode = 2
text = "Pack icon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="HBoxContainer" parent="GridsContainer/GeneralContainer"]
layout_mode = 2

[node name="Pick button" type="Button" parent="GridsContainer/GeneralContainer/Icon"]
layout_mode = 2
tooltip_text = "The pack icon"
text = "Pick icon"

[node name="IconTexture" type="TextureRect" parent="GridsContainer/GeneralContainer/Icon"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GridsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GridsContainer"]
layout_mode = 2
text = "Palette colors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PaletteContainer" type="GridContainer" parent="GridsContainer"]
layout_mode = 2
columns = 2

[node name="LabelBackground" type="Label" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
text = "Background color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="ColorPickerButton" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_op30v")
card_property = "background"

[node name="LabelForeground" type="Label" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
text = "Foreground color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Foreground" type="ColorPickerButton" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_op30v")

[node name="LabelText" type="Label" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
text = "Text color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="ColorPickerButton" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_op30v")
card_property = "text"

[node name="LabelAttackNormal" type="Label" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
text = "Normal attack color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackNormal" type="ColorPickerButton" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_op30v")
card_property = "normal_attack"

[node name="LabelAttackSpecial" type="Label" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
text = "Special attack color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackSpecial" type="ColorPickerButton" parent="GridsContainer/PaletteContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_op30v")
card_property = "special_attack"

[connection signal="pressed" from="GridsContainer/Button" to="." method="pack_reload"]
